# horizon-plugin

./: .gitignore  setup.cfg
mydashboard/: dashboard.py
mydashboard/enabled/: _50_mydashboard.py
mydashboard/mypanel/: panel.py  urls.py
mydashboard/mypanel/templates/mypanel/: index.html
mydashboard/mypanel2/: panel.py  urls.py  views.py
mydashboard/mypanel2/templates/mypanel2/: index.html
mydashboard/mypanel3/: panel.py  tests.py  urls.py  views.py
mydashboard/mypanel3/templates/mypanel3/: index.html
mydashboard/templatetags/: mytags.py
mypanel/enabled/: _50_mypanel.py
