[metadata]
name = mypanel
summary = A panel plugin for OpenStack Dashboard
description-file =
    README.rst
author = Jim Lin
author_email = jimlintw922@gmail.com
home-page = https://jinsenglin.github.io/
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[files]
packages =
    mypanel
